modify validator